RESOLVED FIXED108766
Cleanup: Normalize usage of ExceptionCode in ContainerNode::checkXxxChild()
https://bugs.webkit.org/show_bug.cgi?id=108766
Summary Cleanup: Normalize usage of ExceptionCode in ContainerNode::checkXxxChild()
Mike West
Reported 2013-02-03 02:16:45 PST
Cleanup: Normalize usage of ExceptionCode in ContainerNode::checkXxxChild()
Attachments
Patch (2.58 KB, patch)
2013-02-03 02:49 PST, Mike West
no flags
Mike West
Comment 1 2013-02-03 02:49:53 PST
Mike West
Comment 2 2013-02-03 02:53:32 PST
Marking this as blocking the broader https://bugs.webkit.org/show_bug.cgi?id=108180, and adding moritta@, as https://bugs.webkit.org/show_bug.cgi?id=103372 is the last modification to this code. I've checked the callsites, and this change should have no visible effect other than making the code more consistent, as the calls to checkXXXChild are all prefaced by 'if (ec) return;' statements. Let's see if the bots agree. WDYT?
Kentaro Hara
Comment 3 2013-02-03 15:48:19 PST
Comment on attachment 186256 [details] Patch Looks reasonable. No harm, better consistency.
Mike West
Comment 4 2013-02-04 00:20:56 PST
Comment on attachment 186256 [details] Patch Thanks!
WebKit Review Bot
Comment 5 2013-02-04 00:28:28 PST
Comment on attachment 186256 [details] Patch Clearing flags on attachment: 186256 Committed r141746: <http://trac.webkit.org/changeset/141746>
WebKit Review Bot
Comment 6 2013-02-04 00:28:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.